--- a/404.html
+++ b/404.html
@@ -117,8 +117,8 @@
 
 <footer class="blog-footer w-100">
     <nav class="navbar navbar-light bg-light">
-        <p class="w-100 text-center"></a></p>
-        <p class="w-100 text-center"><a href="#"></a></p>
+        <p class="w-100 text-center">Hugo template made with ❤ by <a href="https://github.com/Xzya">Xzya</a>, inspired by <a href="https://github.com/alanorth/hugo-theme-bootstrap4-blog">hugo-theme-bootstrap4-blog</a></a></p>
+        <p class="w-100 text-center"><a href="#">Back to top</a></p>
     </nav>
 </footer>
 
