--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>mmgg_在线影视资源</title>
+	<title>mmggtv.tk_在线影视资源</title>
 	<meta name="description" content="">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,21 +15,25 @@
 	<link rel="mask-icon" href="/img/logo.svg" color="#ffffff">
 	<link rel="icon" href="/img/logo24.ico">
 	<meta name="msapplication-config" content="/browserconfig.xml">
-	<script data-ad-client="ca-pub-4370679297888448" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+	<link href="./bootstrap.min.css" rel="stylesheet">
+	<script src="./bootstrap.min.js"></script>
+    <script src="./jquery.min.js"></script>
+	<link href="./index.css" rel="stylesheet">
+	<script src="./index.js"></script>
+
 </head>
 
 <body>
 	<header>
 		<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<form class="collapse navbar-collapse" id="search" action="/search.html" method="get"><input class="form-control" id="search_word" name="q" type="text" placeholder="🔍搜索" aria-label="Search"></form>
+				<form class="collapse navbar-collapse" id="search" action="/index.html" method="get"><input class="form-control" id="search_word" name="q" type="text" placeholder="🔍搜索" aria-label="Search"></form>
 				<div>
 		</nav>
 	</header>
 	<main>
-		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light ">
+		<div class="position-relative overflow-hidden  bg-light " style="padding-top: 4rem;" >
 			<div class="container">
 				<div class="item row g-2">
 
@@ -48,28 +52,5 @@
 		</div>
 	</footer>
 </body>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script>
-	function getUrlParam(name) {
-		var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)"); //构造一个含有目标参数的正则表达式对象
-		var r = window.location.search.substr(1).match(reg); //匹配目标参数
-		if (r != null) return decodeURIComponent(r[2]);
-		return null;
-	}
-
-	$(document).ready(function() {
-		let k = getUrlParam('q')
-		if (k) {
-			$(".search_word").val(k)
-			$("title").text(k)
-			$.get("https://zaddone.tk/search/?q=" + encodeURIComponent(k), function(res) {
-				if (res){
-					window.location.href=res
-				}
-
-			})
-		}
-	})
-</script>
-
+<script src="./search.js"></script>
 </html>
